add images and improve responsiveness

--- a/contact.html
+++ b/contact.html
@@ -46,32 +46,28 @@
                 <h1>Contact</h1>
             <div class="contact-container">
                 <div class="contact-card">
-                    <img src="favicons/icons8-featurephone-96.png" alt="">
-                    <p>+91 8845679301</p>
-                </div>
-                <div class="contact-card">
                     <img src="favicons/icons8-telephone-96.png" alt="">
-                    <p>&nbsp;91-11-1234 5678</p>
+                    <p>&nbsp;9653025726</p>
                 </div>
                 <div class="contact-card">
                     <img src="favicons/icons8-whatsapp-96.png" alt="">
-                    <p>&nbsp;8845679301</p>
+                    <p>&nbsp;9653025726</p>
                 </div>
                 <div class="contact-card">
                     <img src="favicons/icons8-email-96.png" alt="">
-                    <p>&nbsp;jaiswalvastralaya@gmail.com</p>
+                    <p>&nbsp;jaiswalvastralaya075@gmail.com</p>
                 </div>
                 <div class="contact-card">
                     <img src="favicons/icons8-twitterx-96.png" alt="">
-                    <p>&nbsp;jkfdhdlhfjdjhf</p>
+                    <p>&nbsp;<a href="http://x.com/HarshJa88774342?t=a7TtotrgN_Jj786w_E_pqQ&s=08">Harsh Jaiswal</a></p>
                 </div>
                 <div class="contact-card">
                     <img src="favicons/icons8-instagram-96.png" alt="">
-                    <p>&nbsp;dshdskhfdj</p>
+                    <p>&nbsp;<a href="http://www.instagram.com/jaiswal_vastralay_9936?igsh=MTF1NXQ3d2hlcTMz">jaiswal_vastralay_9936</a></p>
                 </div>
                 <div class="contact-card">
                     <img src="favicons/icons8-facebook-96.png" alt="">
-                    <p>&nbsp;fdhsadhjka</p>
+                    <p>&nbsp;<a href="https://www.facebook.com/profile.php?id=100089128869158&mibextid=ZbWKwL">Jaiswal Vastralay</a></p>
                 </div>
             </div>
             </div>
