--- a/gallery.html
+++ b/gallery.html
@@ -60,6 +60,33 @@
                 <div class="gallery-card">
                     <img src="images/image9.jpg" alt="image">
                 </div>
+                <div class="gallery-card">
+                    <img src="images/photojaiswal2.jpg" alt="image">
+                </div>
+                <div class="gallery-card">
+                    <img src="images/photojaiswal6.jpg" alt="image">
+                </div>
+                <div class="gallery-card">
+                    <img src="images/photojaiswal7.jpg" alt="image">
+                </div>
+                <div class="gallery-card">
+                    <img src="images/photojaiswal8.jpg" alt="image">
+                </div>
+                <div class="gallery-card">
+                    <img src="images/photojaiswal9.jpg" alt="image">
+                </div>
+                <div class="gallery-card">
+                    <img src="images/photojaiswal10.jpg" alt="image">
+                </div>
+                <div class="gallery-card">
+                    <img src="images/photojaiswal11.jpg" alt="image">
+                </div>
+                <div class="gallery-card">
+                    <img src="images/photojaiswal13.jpg" alt="image">
+                </div>
+                <div class="gallery-card">
+                    <img src="images/photojaiswal0.jpg" alt="image">
+                </div>
             </div>
         </section>
     </main>
