--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
     <main>
         <section id="hero">
             <div class="corousel-container">
-                <img class="corousel-slide" src="images/image6.jpg" alt="image1">
-                <img class="corousel-slide" src="images/image4.jpg" alt="image2">
-                <img class="corousel-slide" src="images/image5.jpg" alt="image3">
-                <img class="corousel-slide" src="images/image7.jpg" alt="image4">
-                <img class="corousel-slide" src="images/image8.jpg" alt="image5">
-                <img class="corousel-slide" src="images/image9.jpg" alt="image6">
+                <img class="corousel-slide" src="images/photojaiswal0.jpg" alt="image1">
+                <img style="object-position: 50% 75%;" class="corousel-slide" src="images/photojaiswal3.jpg" alt="image2">
+                <img style="object-position: 50% 55%;" class="corousel-slide" src="images/photojaiswal1.jpg" alt="image2">
+                <img class="corousel-slide" src="images/photojaiswal12.jpg" alt="image3">
+                <img style="object-position: 50% 10%;" class="corousel-slide" src="images/photojaiswal4.jpg" alt="image4">
+                <img class="corousel-slide" src="images/photojaiswal15.jpg" alt="image7">
+                <img class="corousel-slide" src="images/photojaiswal5.jpg" alt="image5">
             </div>
             <div class="corousel-nav">
+                <span class="corousel-button"></span>
                 <span class="corousel-button"></span>
                 <span class="corousel-button"></span>
                 <span class="corousel-button"></span>
