--- a/product.html
+++ b/product.html
@@ -64,7 +64,7 @@
                     <h3>Saree</h3>
                 </div>
                 <div class="cards">
-                    <a href=""><img src="images/lehenga-women.jpg" alt="womenswear"></a>
+                    <a href=""><img src="images/lehenga.jpg" alt="womenswear"></a>
                     <h3>Lehenga</h3>
                 </div>
                 <div class="cards">
