--- a/index.html
+++ b/index.html
@@ -35,45 +35,57 @@
                 <li><a class="nav-link" href="about.html">About Us</a></li>
                 <li><a class="nav-link" href="product.html">Products</a></li>
                 <li><a class="nav-link" href="gallery.html">Gallery</a></li>
-                <li><a class="nav-link" href="contact.html">Contact</a></li>
+                <li><a class="nav-link" href="#location">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="hero">
-            <div class="corousel-container">
-                <img class="corousel-slide" src="images/photojaiswal0.jpg" alt="image1">
-                <img style="object-position: 50% 75%;" class="corousel-slide" src="images/photojaiswal3.jpg" alt="image2">
-                <img style="object-position: 50% 55%;" class="corousel-slide" src="images/photojaiswal1.jpg" alt="image2">
-                <img class="corousel-slide" src="images/photojaiswal12.jpg" alt="image3">
-                <img style="object-position: 50% 10%;" class="corousel-slide" src="images/photojaiswal4.jpg" alt="image4">
-                <img class="corousel-slide" src="images/photojaiswal15.jpg" alt="image7">
-                <img class="corousel-slide" src="images/photojaiswal5.jpg" alt="image5">
-            </div>
-            <div class="corousel-nav">
-                <span class="corousel-button"></span>
-                <span class="corousel-button"></span>
-                <span class="corousel-button"></span>
-                <span class="corousel-button"></span>
-                <span class="corousel-button"></span>
-                <span class="corousel-button"></span>
-                <span class="corousel-button"></span>
+            <div class="hero-container">
+                <div class="corousel-container">
+                    <img class="corousel-slide" src="images/photojaiswal0.jpg" alt="image1">
+                    <img style="object-position: 50% 75%;" class="corousel-slide" src="images/photojaiswal3.jpg" alt="image2">
+                    <img style="object-position: 50% 55%;" class="corousel-slide" src="images/photojaiswal1.jpg" alt="image2">
+                    <img class="corousel-slide" src="images/photojaiswal12.jpg" alt="image3">
+                    <img style="object-position: 50% 10%;" class="corousel-slide" src="images/photojaiswal4.jpg" alt="image4">
+                    <img class="corousel-slide" src="images/photojaiswal15.jpg" alt="image7">
+                    <img class="corousel-slide" src="images/photojaiswal5.jpg" alt="image5">
+                </div>
+                <div class="corousel-arrow">
+                    <i class='bx bx-chevron-left'></i>
+                    <i class='bx bx-chevron-right'></i>
+                </div>
+                <div class="corousel-nav">
+                    <i class='bx bx-circle corousel-button'></i>
+                    <i class='bx bx-circle corousel-button'></i>
+                    <i class='bx bx-circle corousel-button'></i>
+                    <i class='bx bx-circle corousel-button'></i>
+                    <i class='bx bx-circle corousel-button'></i>
+                    <i class='bx bx-circle corousel-button'></i>
+                    <i class='bx bx-circle corousel-button'></i>
+                    <!-- <span class="corousel-button"></span>
+                    <span class="corousel-button"></span>
+                    <span class="corousel-button"></span>
+                    <span class="corousel-button"></span>
+                    <span class="corousel-button"></span>
+                    <span class="corousel-button"></span>
+                    <span class="corousel-button"></span> -->
+                </div>
             </div>
         </section>
-        <section id="products">
-            <h2>Our Products</h2>
-            <div class="card-container">
-                <div class="cards">
-                    <a href=""><img src="images/menswear1.jpg" alt="menswear"></a>
-                    <h3>Menswear</h3>
+        <section id="section2">
+            <div class="categories">
+                <h2>Categories</h2>
+            </div>
+            <div class="container-one">
+                <div class="wear-card one">
+                    Menswear
                 </div>
-                <div class="cards">
-                    <a href=""><img src="images/womenswear.jpg" alt="womenswear"></a>
-                    <h3>Womenswear</h3>
+                <div class="wear-card two">
+                    Womenswear
                 </div>
-                <div class="cards">
-                    <a href=""><img src="images/kidswear1.jpg" alt="Kidswear"></a>
-                    <h3>Kidswear</h3>
+                <div class="wear-card three">
+                    Kidswear
                 </div>
             </div>
         </section>
@@ -81,10 +93,13 @@
             <h2>Location</h2>
             <div class="location-container">
                 <div class="address-container">
-                    <div class="address-text">
-                        <h3>Jaiswal Vastralaya</h3>
-                        <span>5.0 ⭐⭐⭐⭐⭐ (3)<br>Clothing store</span>
-                        <p><b>Address:</b> <br>Sadullapur, Chakia, Uttar Pradesh <br><b>Pin code -</b> 232103<br><b>Hours:</b> 8am-8pm</p>
+                    <h3>Jaiswal Vastralaya</h3>
+                    <span>5.0 ⭐⭐⭐⭐⭐ (3)<br>Clothing store</span>
+                    <p><b>Hours:</b> 8am-8pm <br><b>Mobile:</b> 9653025726 <br><b>Email:</b> jaiswalvastralaya075@gmail.com</p>
+                    <div class="social-media">
+                        <a href="https://www.facebook.com/profile.php?id=100089128869158&mibextid=ZbWKwL"><i class='bx bxl-facebook-circle'></i></a>
+                        <a href="http://x.com/HarshJa88774342?t=a7TtotrgN_Jj786w_E_pqQ&s=08"><i class='bx bxl-twitter'></i></a>
+                        <a href="http://www.instagram.com/jaiswal_vastralay_9936?igsh=MTF1NXQ3d2hlcTMz"><i class='bx bxl-instagram-alt'></i></a>
                     </div>
                 </div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.577540872764!2d83.21467977451496!3d25.048407037712817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398e41c8b777b893%3A0x5c521c29846af221!2sJaiswal%20Vastralaya!5e0!3m2!1sen!2sin!4v1695638105212!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -98,7 +113,7 @@
                 <a href="about.html">About Us</a>
                 <a href="product.html">Products</a>
                 <a href="gallery.html">Gallery</a>
-                <a href="contact.html">Contact</a>
+                <a href="#location">Contact</a>
             </div>
             <div class="footer-address">
                 <p><b>Address:</b> <br>Sadullapur, Chakia, Uttar Pradesh <br><b>Pin code -</b> 232103</p>
