--- a/product.html
+++ b/product.html
@@ -34,13 +34,12 @@
                 <li><a class="nav-link" href="about.html">About Us</a></li>
                 <li><a class="nav-link active" href="product.html">Products</a></li>
                 <li><a class="nav-link" href="gallery.html">Gallery</a></li>
-                <li><a class="nav-link" href="contact.html">Contact</a></li>
+                <li><a class="nav-link" href="index.html/#location">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="products">
-            <hr>
             <h2>Our Products</h2>
             <div class="card-container">
                 <div class="cards">
@@ -81,7 +80,7 @@
                 <a href="about.html">About Us</a>
                 <a href="product.html">Products</a>
                 <a href="gallery.html">Gallery</a>
-                <a href="contact.html">Contact</a>
+                <a href="index.html/#location">Contact</a>
             </div>
             <div class="footer-address">
                 <p><b>Address:</b> <br>Sadullapur, Chakia, Uttar Pradesh <br><b>Pin code -</b> 232103</p>
