Add drag feature to carousel

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <p><b>Address:</b> <br>Sadullapur, Chakia, Uttar Pradesh <br><b>Pin code -</b> 232103</p>
             </div>
         </div>
-        <p class="copyright">© Jaiswal Vastralaya <br> Made by Gaurav Yadav</p> 
+        <p class="copyright">© Jaiswal Vastralaya</p> 
     </footer>
 </body>
 <script src="index.js"></script>
