--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                 <li><a class="nav-link active" href="about.html">About Us</a></li>
                 <li><a class="nav-link" href="product.html">Products</a></li>
                 <li><a class="nav-link" href="gallery.html">Gallery</a></li>
-                <li><a class="nav-link" href="index.html/#location">Contact</a></li>
+                <li><a class="nav-link" href="index.html#location">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -61,7 +61,7 @@
                 <a href="about.html">About Us</a>
                 <a href="product.html">Products</a>
                 <a href="gallery.html">Gallery</a>
-                <a href="index.html/#location">Contact</a>
+                <a href="index.html#location">Contact</a>
             </div>
             <div class="footer-address">
                 <p><b>Address:</b> <br>Sadullapur, Chakia, Uttar Pradesh <br><b>Pin code -</b> 232103</p>
