Add carousel draggable feature for touchscreen devices

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a class="nav-link" href="about.html">About Us</a></li>
                 <li><a class="nav-link" href="product.html">Products</a></li>
                 <li><a class="nav-link" href="gallery.html">Gallery</a></li>
-                <li><a class="nav-link" href="#location">Contact</a></li>
+                <li><a class="nav-link" href="#location" onclick="toggleCheckbox()">Contact</a></li>
             </ul>
         </nav>
     </header>
